--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "gsap": "^3.11.3",
+    "mdb-vue-ui-kit": "^3.1.0",
     "vue": "^3.2.13",
     "vue-animate-onscroll": "^1.0.8",
     "vue-plugin-load-script": "^2.x.x",
