--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@popperjs/core": "^2.11.6",
+    "bootstrap": "^5.2.2",
     "core-js": "^3.8.3",
     "gsap": "^3.11.3",
     "mdb-vue-ui-kit": "^3.1.0",
